[tool.poetry]
name = "myrlenv"
version = "0.1.0"
description = ""
authors = ["TS"]
license = "TS"

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.18.3"
atari-py = "^0.3.0"
box2d-py = "^2.3.8"
tensorflow = "^2.5.0"
tensorflow-gpu = "^2.5.0"
torch = "^1.9.0"
numpy = "^1.19.0"
Box2D = "^2.3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
